Atualizacao da porta

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,19 +1,19 @@
 {
   "type": "postgres",
-  "host": "localhost",
+  "host": "3.238.163.106",
   "port": 5432,
   "username": "postgres",
-  "password": "132887",
+  "password": "docker",
   "database": "apiblock",
   "$schema": "public",
   "entities": [
-    "./src/modules/data/typeorm/entities/*.ts"
+    "./dist/modules/data/typeorm/entities/*.js"
 ],
   "migrations":[
-    "./src/shared/infra/typeorm/migrations/*.ts"
+    "./dist/shared/infra/typeorm/migrations/*.js"
   ],
   "cli":{
-    "migrationsDir": "./src/shared/infra/typeorm/migrations"
+    "migrationsDir": "./dist/shared/infra/typeorm/migrations"
   }
 
 }
