--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/socket.io": "^3.0.2",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
+    "edge-multiplay": "^1.3.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
@@ -43,6 +45,7 @@
     "mysql": "^2.18.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.5.1",
     "typeorm": "0.2.29",
     "uuid": "^8.3.2"
   }
