--- a/ormconfig copy.json
+++ b/ormconfig copy.json
@@ -1,10 +1,10 @@
 {
   "type": "postgres",
-  "host": "localhost",
+  "host": "3.238.163.106",
   "port": 5432,
   "username": "postgres",
-  "password": "132887",
-  "database": "apiblock",
+  "password": "docker",
+  "database": "apiblockTeste",
   "$schema": "public",
   "entities": [
     "./src/modules/data/typeorm/entities/*.ts"
