--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "npx tsc",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
-    "dev:server": "ts-node-dev  -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts"
+    "dev:server": "ts-node-dev  -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "dev:socket": "ts-node-dev  -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/tempo/tempo.ts"
+
   },
   "keywords": [],
   "author": "",
@@ -33,6 +35,7 @@
   },
   "dependencies": {
     "@types/socket.io": "^3.0.2",
+    "@types/ws": "^8.5.3",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
@@ -48,6 +51,7 @@
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.5.1",
     "typeorm": "0.2.29",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "ws": "^8.8.1"
   }
 }
