--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "lint-fix": "eslint . --ext .ts --fix",
     "dev:server": "ts-node-dev  -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "dev:socket": "ts-node-dev  -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/tempo/tempo.ts"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
@@ -25,9 +26,11 @@
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.2.0",
+    "husky": "^8.0.1",
     "prettier": "^2.6.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.0.0",
@@ -53,5 +56,10 @@
     "typeorm": "0.2.29",
     "uuid": "^8.3.2",
     "ws": "^8.8.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
