--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,8 @@ services:
     container_name: apivendas-redis
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
+    networks:
+      - node-network
 
 
 
