feat:Adicionando novo pack

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,13 +7,13 @@
   "database": "apiblock",
   "$schema": "public",
   "entities": [
-    "./src/modules/data/typeorm/entities/*.ts"
+    "./dist/modules/data/typeorm/entities/*.js"
 ],
   "migrations":[
-    "./src/shared/infra/typeorm/migrations/*.ts"
+    "./dist/shared/infra/typeorm/migrations/*.js"
   ],
   "cli":{
-    "migrationsDir": "./src/shared/infra/typeorm/migrations"
+    "migrationsDir": "./dist/shared/infra/typeorm/migrations"
   }
 
 }
