--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "build": "npx tsc",
     "lint": "eslint . --ext .ts",
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.28.10",
+    "@types/jest": "^28.1.7",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.0.0",
@@ -32,12 +33,15 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.2.0",
     "husky": "^8.0.1",
+    "jest": "^28.1.3",
     "prettier": "^2.6.2",
+    "ts-jest": "^28.0.8",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/express-rate-limit": "^6.0.0",
     "@types/socket.io": "^3.0.2",
     "@types/ws": "^8.5.3",
     "axios": "^0.27.2",
@@ -48,11 +52,15 @@
     "edge-multiplay": "^1.3.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "express-limiter": "^1.6.1",
+    "express-rate-limit": "^6.5.1",
     "ioredis": "^5.2.2",
+    "jest-module-name-mapper": "^0.1.5",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "pg": "^8.7.3",
+    "rate-limiter-flexible": "^2.3.8",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.5.1",
     "typeorm": "0.2.29",
