feat:Mudanca na senha do banco de dados e docker , atualizacao ormconfig e Jest Testes

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,9 +1,9 @@
 {
   "type": "postgres",
-  "host": "localhost",
+  "host": "167.99.145.230",
   "port": 5432,
   "username": "postgres",
-  "password": "132887",
+  "password": "docker",
   "database": "apiblock",
   "$schema": "public",
   "entities": [
