docs(atualizacao): atualizacao Insominia e Ormconfig

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
     "dev:server": "ts-node-dev  -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "start": "node dist/shared/infra/http/server.js",
     "dev:socket": "ts-node-dev  -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/tempo/tempo.ts"
   },
   "keywords": [],
