--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,12 @@
-node_modules
+.idea/
+.vscode/
+node_modules/
+build/
+temp/
+.env
+coverage
 dist
-build
-/*.js
+.docker
+
+uploads/*
+!uploads/.gitkeep
